--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="Ephemeral - a new way of thinking about your to-do list"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <title>Ephemeral - Do or Disappear</title>
   </head>
   <body>
